Squashed commit of the following:
commit b31d263d313f7725a806a080b8c0305babe69a4a
Author: jocelynluizzi13 <jocelynl@meta.com>
Date:   Mon Mar 25 09:27:16 2024 -0500

    Squashed commit of the following:

    commit 62b1443b7f045c4216a3bdf0a5b7e3649a7a602f
    Author: jocelynluizzi13 <jocelynl@meta.com>
    Date:   Fri Mar 22 13:39:54 2024 -0500

        CUREIOUS WHAT THIS WILL DO?

        Update ClassMemberConversion.kt

        com

    commit 17d7c996d6fd45daf62d53b22f9f8df0d1989f73
    Author: jocelynluizzi13 <jocelynl@meta.com>
    Date:   Tue Mar 19 09:16:26 2024 -0500

        made changes for good

        made changes for good

    commit 27bc475039dd42ff3cf997194bb62ffaaee7051d
    Merge: 1b0862176edc 651938574ada
    Author: jocelynluizzi13 <153304065+jocelynluizzi13@users.noreply.github.com>
    Date:   Mon Mar 25 08:05:03 2024 -0500

        Merge branch 'JetBrains:master' into VarToValProcessing

    commit 1b0862176edcfb009d238594fff2a02e9d4bdcaf
    Author: jocelynluizzi13 <jocelynl@meta.com>
    Date:   Wed Mar 6 10:26:52 2024 -0600

        [kotlin] Move VarToVal and ValToVar Processings Earlier

commit 651938574ada16f0628cd4e7a4ee5829a603bcd3
Author: Roman Shevchenko <roman.shevchenko@jetbrains.com>
Date:   Mon Mar 25 11:11:06 2024 +0100

    Cleanup (formatting)

    GitOrigin-RevId: 831954b403073ff8018628e41aeba5a22eea7beb

commit 5970c51a6fb3d0140b3159daf2e0c1587df388b1
Author: Roman Shevchenko <roman.shevchenko@jetbrains.com>
Date:   Mon Mar 25 11:10:39 2024 +0100

    [vfs] tracing module watch roots properly (IDEA-307814)

    GitOrigin-RevId: 8045766bdc2584e9a972c14fda60373480db4840

commit 6706f8d13b9969d3f5b1282b52f5359a5eebce40
Author: Alexey Kalina <alexey.kalina@jetbrains.com>
Date:   Mon Mar 25 12:04:46 2024 +0000

    [evaluation-plugin] Context Collection for Unit Test Generation in Evaluation Plugin

    Merge-request: IJ-MR-126952
    Merged-by: Teodora Stojcheska <teodora.stojcheska@jetbrains.com>

    GitOrigin-RevId: 7875780b0